perf: ini sentrei template

--- a/package.json
+++ b/package.json
@@ -1,54 +1,40 @@
 {
-  "name": "shunkakinoki.com",
+  "name": "@sentrei/template",
   "version": "1.24.10",
   "description": "",
-  "homepage": "https://shunkakinoki.com",
+  "homepage": "https://template.sentrei.com",
   "bugs": {
-    "url": "https://github.com/shunkakinoki/shunkakinoki.com/issues"
+    "url": "https://github.com/sentrei/template/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shunkakinoki/shunkakinoki.com.git"
+    "url": "git+https://github.com/sentrei/template.git"
   },
   "license": "MIT",
-  "author": "Shun Kakinoki",
+  "author": "Sentrei, Inc.",
   "scripts": {
-    "analyze": "cross-env NEXT_ANALYZE=true next build",
-    "build": "next build",
-    "postbuild": "next-sitemap",
-    "build:storybook": "build-storybook -o public",
-    "cmd:eslint": "scripty",
-    "cmd:prettier": "scripty",
-    "depcheck": "scripty",
-    "depcheck:exec": "scripty",
-    "depcheck:root": "scripty",
     "dev": "next dev",
-    "env:pull": "doppler secrets download --no-file --format env > .env.local",
-    "export": "next export",
-    "fix": "scripty",
-    "fix:eslint": "scripty",
-    "fix:prettier": "scripty",
-    "fix:sort-package-json": "scripty",
-    "lint": "scripty",
-    "lint:eslint": "scripty",
-    "lint:npm-package-json": "scripty",
-    "lint:prettier": "scripty",
-    "ncu": "scripty",
-    "ncu:check": "scripty",
-    "ncu:upgrade": "scripty",
-    "prepare": "scripty",
-    "prepublishOnly": "scripty",
-    "prettier:fix": "scripty",
-    "prettier:lint": "scripty",
-    "postpublish": "scripty",
-    "release": "scripty",
-    "release:multi-semantic-release": "scripty",
-    "release:semantic-release": "scripty",
-    "storybook": "start-storybook -p 6006",
-    "stylelint:check": "stylelint 'src/**/*.css'",
-    "stylelint:fix": "stylelint 'src/**/*.css' --fix",
-    "tsc": "tsc",
-    "tsc:watch": "tsc -w"
+    "eslint:cmd": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint",
+    "eslint:fix": "yarn run eslint:cmd . --fix",
+    "eslint:lint": "yarn run eslint:cmd .",
+    "fix": "concurrently 'yarn:*:fix'",
+    "lint": "concurrently 'yarn:*:lint'",
+    "multi-semantic-release": "multi-semantic-release --sequential-init",
+    "multi-semantic-release:check": "multi-semantic-release --dry-run --sequential-init",
+    "ncu:check": "ncu --deep -p yarn",
+    "ncu:upgrade": "ncu --deep -u -p yarn",
+    "npm-package-json:lint": "npmPkgJsonLint .",
+    "prepare": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "prettier:cmd": "prettier --ignore-unknown",
+    "prettier:fix": "yarn run prettier:cmd --write .",
+    "prettier:lint": "yarn run prettier:cmd --check .",
+    "postpublish": "pinst --enable",
+    "release": "yarn run multi-semantic-release && yarn run semantic-release",
+    "release:check": "yarn run multi-semantic-release:check && yarn run semantic-release:check",
+    "semantic-release": "semantic-release",
+    "semantic-release:check": "semantic-release --dry-run",
+    "start": "next start"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.1",
