--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@sentrei/template",
   "version": "1.24.10",
+  "private": false,
   "description": "",
   "homepage": "https://template.sentrei.com",
   "bugs": {
