--- a/package.json
+++ b/package.json
@@ -36,57 +36,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.1",
-    "@heroicons/react": "^1.0.4",
-    "@next-auth/prisma-adapter": "^0.5.4",
-    "@next/bundle-analyzer": "^11.1.2",
-    "autoprefixer": "^10.3.6",
-    "clsx": "^1.1.1",
-    "next": "^11.1.2",
-    "next-auth": "^3.29.0",
-    "next-seo": "^4.28.1",
-    "next-sitemap": "^1.6.173",
-    "next-themes": "^0.0.15",
-    "next-translate": "^1.1.0",
-    "postcss": "^8.3.8",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "recoil": "^0.4.1",
-    "swr": "^1.0.1",
-    "tailwindcss": "^2.2.16"
+    "@sentrei/next": "^1.13.0",
+    "@sentrei/postcss": "^1.4.3",
+    "@sentrei/tailwindcss": "^1.5.0"
   },
   "devDependencies": {
-    "@sentrei/commitlint": "^1.2.2",
-    "@sentrei/depcheck": "^1.5.0",
-    "@sentrei/dev": "^1.3.4",
-    "@sentrei/eslint-config": "^1.5.8",
-    "@sentrei/husky": "^1.3.0",
-    "@sentrei/lint-staged": "^1.2.2",
-    "@sentrei/npm-check-updates": "^1.5.1",
-    "@sentrei/npm-package-json-lint-config": "^1.1.0",
-    "@sentrei/prettier": "^1.5.1",
-    "@sentrei/scripty": "^1.0.1",
-    "@sentrei/semantic-release": "^1.5.3",
-    "@sentrei/stylelint": "^1.2.0",
-    "@sentrei/tailwindcss": "^1.4.3",
-    "@sentrei/tsconfig": "^1.6.0",
-    "@sls-next/serverless-component": "^3.4.0",
-    "@types/cors": "^2.8.12",
-    "@types/marked": "^3.0.1",
-    "@types/react": "^17.0.26",
-    "@types/react-dom": "^17.0.9",
-    "typescript": "^4.4.3",
-    "vercel": "^23.1.2",
-    "webpack": "^5.56.0"
+    "@sentrei/kit": "^1.0.0"
   },
   "npmpackagejsonlint": {
     "extends": "@sentrei/npm-package-json-lint-config"
-  },
-  "scripty": {
-    "logLevel": "warn",
-    "modules": [
-      "@sentrei/scripty"
-    ],
-    "parallel": true
   }
 }
